scroll watch list overflow. Fix #35

--- a/app/pages/dashboard/dashboard.scss
+++ b/app/pages/dashboard/dashboard.scss
@@ -7,5 +7,10 @@
 		height: 60%;
 		z-index: 0;
 	}	
+
+    ion-list{
+        height: 60%;
+        overflow-y:scroll;
+    }
 	
 }
